Fix alignment issue in CSS, fix module paths, fix check in view module for container passed

--- a/app/css/list.css
+++ b/app/css/list.css
@@ -1,5 +1,6 @@
 .tui-list.listContainer {
 	text-align: center;
+	margin: 10px auto 10px auto;
 	position: relative;
 }
 .tui-list .listitem {
